--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -77,7 +77,7 @@ aim with this program is to provide an useful and effective tool to
 generate all the stable graphs of genus $g$ with $n$ marked points up
 to isomorphism, for low values of $g$ and $n$.
 
-We construct an algorithm to generate all the stable, $n-$pointed
+We construct an algorithm to generate all the stable, $n$-pointed
 graphs of genus $g$. Then we use the library nauty~(\cite{nauty}) to
 eliminate isomorphic graphs from the list of graphs thus
 created. Since to check that two stable graphs are isomorphic is
@@ -136,14 +136,13 @@ K-1\}$. Let $\Sigma_K$ be the symmetric group on the set $\ubar{K}$.
   \item Its \emph{total number of marked points}, defined as $\sum_{v
       \in V} n_v$, equals $N$.
   \item \label{it:condition stability} Stability condition: $\deg v +
-    n_v \geq 3$ for every vertex $v$ with $g_v = 0$ %(in other words,
-    %$v$ must have at least $3$ \emph{half edges\/}).
+    n_v \geq 3$ for every vertex $v$ with $g_v = 0$.
   \end{enumerate}
 \end{definition}
 
 \begin{notation} We will call \emph{half edge} associated to a vertex $v$
 either a marked point on $v$ or half of an edge that connects $v$ to an
-other vertex. In this way stability condition can be rephrased in: for 
+other vertex. In this way stability condition can be rephrased in: for
 every vertex $v$ of genus $0$ there are at least $3$ half edges on it.
 An half edge is said to come from an edge if it is of the second type.
 \end{notation}
@@ -167,8 +166,8 @@ Our task is to generate one stable graph for each isomorphism class.
 
 \section{How the program generates graphs}
 
- In this section we describe the general ideas of our algorithm.
- Let us first introduce the notation we use in the program.
+In this section we describe the general ideas of our algorithm. Let us
+first introduce the notation we use in the program.
 
 \begin{notation}\label{not:gnla}
   The set of vertices $V$ will always be $\ubar{K}$, so that vertices
@@ -184,10 +183,10 @@ Our task is to generate one stable graph for each isomorphism class.
 
 \begin{remark}
   In the following, we assume $\abs{V} > 1$ in order not to deal with
-  special cases. There are trivially $G+1$ stable graphs of type $(G,
-  N)$ with one vertex. Indeed, if there is one vertex, the choice of the genus  
-  uniquely determines the number of loops on it after Definition 
-  \ref{def:stable graph}.
+  degenerate cases. There are trivially $G+1$ stable graphs of type
+  $(G, N)$ with one vertex. Indeed, if there is one vertex, the choice
+  of the genus uniquely determines the number of loops on it after
+  Definition~\ref{def:stable graph}.
 \end{remark}
 
 The program uses recursive functions to generate the data that
@@ -218,32 +217,29 @@ Therefore, the program fills the data in the order
     K-1}, a_{1, 2}, \dots, a_{1, K-1}, \dots, a_{K-2, K-1}\text{.}
 \end{align*}
 
-It is enough to generate the strict upper triangle of the matrix $a$ because the
-matrix is symmetric, and the diagonal elements have already been generated in the 
-vector $l$.
- 
-Every single datum is assigned trying all the possibilities within a range
-that depends upon the values $G,N$, and upon the values of the data that have
-already been filled.
- %Each entry of the matrix $M$ is filled with an integer in a specific range that we are going to describe in Section~\ref{sec:ranges}. For each of
-%these attempts, it recursively continues to fill the data until
-%everything is fixed and the graph is checked to be a stable graph and
-%not isomorphic to a graph already generated.
+It is enough to generate the strict upper triangle of the matrix $a$
+because the matrix is symmetric, and the diagonal elements have
+already been generated in the vector $l$.
+
+Every single datum is assigned trying all the possibilities within a
+range that depends upon the values of $G$ and $N$, and upon the values
+of the data that have already been filled.
 
 % TODO explain better that division is a way to enforce lexicographic
-% order on g,n,l,a (scanned horizontally and vertically)
+% order on the column of the matrix composed by g,n,l,a
 
-The main ingredient to decide the lower endpoint of the range
-is the concept of \emph{division\/} before an index $i$. 
-We start filling the genus vector $g$ in a non decreasing way: every time we
-assign a value $g_i$ strictly greater than $g_{i-1}$ we put a division before $i$.
-Then we start filling the vector $n$ in such a way that, within two division ranges,
-it is non decreasing. Again we introduce a division before $i$ every time
-we assign a value $n_i$ strictly bigger than $n_{i-1}$. We follow this procedure
-also for the vector $l$. Finally, we start filling the rows of the matrix $a$.
+The main ingredient to decide the lower endpoint of the range is the
+concept of \emph{division\/} before an index $i$.  We start filling
+the genus vector $g$ in a non decreasing way: every time we assign a
+value $g_i$ strictly greater than $g_{i-1}$ we put a division before
+$i$.  Then we start filling the vector $n$ in such a way that, within
+two division ranges, it is non decreasing. Again we introduce a
+division before $i$ every time we assign a value $n_i$ strictly bigger
+than $n_{i-1}$. We follow this procedure also for the vector
+$l$. Finally, we start filling the rows of the matrix $a$.
 
 The value of $a_{i,j}$ is assigned starting from:
-$$
+\[
 \begin{cases}
   0 & \text{if there are divisions before $i$ and $j$}\\
   a_{i,j-1} & \text{if there is a division before $i$ but not before
@@ -253,48 +249,48 @@ $$
   \max\{a_{i,j-1}, a_{i-1,j}\} & \text{if there are no divisions
     before $i$ or $j$.}
 \end{cases}
-$$
+\]
 We put a division before $i$ if $a_{i,j} > a_{i-1,j}$ and a division
 before $j$ if $a_{i,j} > a_{i,j-1}$.
 
-Once the divisions are fixed, for each datum we fix the range of possibilities
-within it can vary. The range we introduce for each element to be chosen is
-more refined than the one induced by the divisions, and it is explained in the 
-following section. For each datum to be filled, the range depends upon $G$, $N$
-and the data that have already been filled. The ranges are defined in such a way
-that the conditions of Definition \ref{def:stable graph} are checked as early 
-as possible.
+Once the divisions are fixed, for each datum we fix the range of
+possibilities within it can vary. The range we introduce for each
+element to be chosen is more refined than the one induced by the
+divisions, and it is explained in the following section. For each
+datum to be filled, the range depends upon $G$, $N$ and the data that
+have already been filled. The ranges are defined in such a way that
+the conditions of Definition~\ref{def:stable graph} are checked as
+early as possible.
 
-%Finally, at the end of the $i$-th row of the matrix, we test that the $i$-th
-%vertex is connected to at least another vertex. If $g_i$ equals zero
-%we also check the stability of the $i$-th vertex.
+% Finally, at the end of the $i$-th row of the matrix, we test that
+% the $i$-th vertex is connected to at least another vertex. If $g_i$
+% equals zero we also check the stability of the $i$-th vertex.
 
 Finally, when all data are fully filled, we test that all the
-conditions of Definition \ref{def:stable graph} hold, in particular 
-that the graph is actually connected. Then we use the program Nauty \cite{nauty} 
-to check if this graph is isomorphic to a previously generated graph.
-If this is the case, we add the graph to the list of graphs of genus $G$
-with $N$ marked points.
+conditions of Definition~\ref{def:stable graph} hold, in particular
+that the graph is actually connected. Then we use the program Nauty
+\cite{nauty} to check if this graph is isomorphic to a previously
+generated graph.  If this is the case, we add the graph to the list of
+graphs of genus $G$ with $N$ marked points.
 
-%sembrerebbe che se invece di usare il nostro programma e nauty
-%in serie, i due fossero ottimizzati l'uno per l'altro si otterrebbero risultati 
-%molto migliori?
+
+
 \section{Description of the ranges}\label{sec:ranges}
 
-In the previous section we have introduced the algorithm, by describing the
-divisions. In this section we introduce accurate ranges for the possible values
-of $g,n,l$ and $a$. In particular we try to obtain estimates on the upper 
-extremum for each datum to be filled.
+In the previous section we have introduced the algorithm, by
+describing the divisions. In this section we introduce accurate ranges
+for the possible values of $g,n,l$ and $a$. In particular we try to
+obtain estimates on the upper extremum for each datum to be filled.
 
 \begin{notation}
   At any time during the algorithm, we let $e^{\MAX}$ be the maximum
   number of edges that could be placed after that time, and $c$ be the
   number of couples of (different) vertices already connected by an
   edge. We let $p_1$ be the number of vertices $i$ to which the
-  algorithm has assigned $g_i = 0$. Note that the final value of $p_1$ 
-  is determined when the first genus greater than $0$ is assigned, in 
+  algorithm has assigned $g_i = 0$. Note that the final value of $p_1$
+  is determined when the first genus greater than $0$ is assigned, in
   particular the final value of $p_1$ is determined at the end of the
-  assignment of the values to the vector $g$. 
+  assignment of the values to the vector $g$.
 \end{notation}
 
 \begin{notation}
@@ -303,8 +299,8 @@ extremum for each datum to be filled.
   $i$-th vertex. This is justified by the fact that we know that at
   least one half edge will be assigned to the $i$-th vertex to connect
   it to the rest of the graph. Hence, whenever $g_i = 0$, $n^{(2)}_i$
-  is the number of \emph{stabilizing\/} half edges at the vertex $i$: 
-  one half edge is needed to connect the vertex to the rest of the graph, 
+  is the number of \emph{stabilizing\/} half edges at the vertex $i$:
+  one half edge is needed to connect the vertex to the rest of the graph,
   and then at least two more half edges are needed to stabilize the
   vertex. When deciding $a_{i,j}$, it is also useful to have defined
   $h_i$, the total number of half edges that hit the $i$-th
@@ -320,11 +316,11 @@ extremum for each datum to be filled.
 \end{notation}
 
 We are now ready to describe the ranges in which the data can vary.
-We study subsequently the cases of $g$, $n$, $l$ and $a$, thus 
-following the order of the recursions of our algorithm. Each range is 
+We study subsequently the cases of $g$, $n$, $l$ and $a$, thus
+following the order of the recursions of our algorithm. Each range is
 described by presenting a first list of general constraints on the
-parameters and then by presenting a second list containing the extimates
-that allow the definitions of the actual ranges.
+parameters and then by presenting a second list containing the
+extimates that allow the definitions of the actual ranges.
 
 
 \subsection{Range for $g_i$}
@@ -339,8 +335,8 @@ following situation:
   to send the other $K-2$ half edges; conversely, the $2(e^{\MAX} - K
   +1)$ half edges of the remaining edges can be associated to any
   vertex; therefore, the maximum number of half edges coming from
-  edges (not counting those that are needed to connect the graph) 
-  is $2e^{\MAX} - K = 2(G - G_i) + K - 2$;
+  edges (not counting those that are needed to connect the graph) is
+  $2e^{\MAX} - K = 2(G - G_i) + K - 2$;
 \item the maximum number of half edges coming from marked points is
   $N$;
 \item we need $2p_1$ half edges to stabilize the genus $0$ vertices,
@@ -378,8 +374,8 @@ $g_i$:
 When deciding $n_i$, we have the following situation:
 \begin{itemize}
 \item as before, $e^{\MAX} = G - G_K + K - 1 \geq K-1$, and the
-  maximum number of half edges still to be assigned and coming from edges is
-  $2e^{\MAX} - K = 2(G - G_K) + K - 2$;
+  maximum number of half edges still to be assigned and coming from
+  edges is $2e^{\MAX} - K = 2(G - G_K) + K - 2$;
 \item the number of half edges still to be assigned and coming from
   marked points is $N - N_i - n_i$;
 \item we need $2p_1 - N^{(2)}_i - n^{(2)}_i$ half edges to
@@ -389,8 +385,8 @@ When deciding $n_i$, we have the following situation:
   marked points.
 \end{itemize}
 
-The following conditions define then the ranges for the possible choices 
-for $n_i$:
+The following conditions define then the ranges for the possible
+choices for $n_i$:
 
 \begin{enumerate}
 \item if there is not a division before $i$ (that is, if $g_i =
@@ -403,8 +399,8 @@ for $n_i$:
     &\qquad\Rightarrow n_i \leq N - N_i\\
     &\qquad\Rightarrow (p_1 - i)n_i \leq N - N_i\text{ if moreover $g_i = 0$.}
   \end{align*}
-\item if $g_i = 0$, for the purpose of stabilizing the first $i+1$ curves 
-  we cannot use marked points anymore, therefore we have
+\item if $g_i = 0$, for the purpose of stabilizing the first $i+1$
+  curves we cannot use marked points anymore, therefore we have
   \begin{align*}
     &2 (i+1) - N^{(2)}_i - n^{(2)}_i \leq (2(G - G_K) + K - 2)\\
     &\qquad\Rightarrow n^{(2)}_i = \min(2, n_i) \geq - (2(G - G_K) + K - 2) + (2(i+1) - N^{(2)}_i)\\
@@ -437,15 +433,11 @@ The conditions on $l_i$ are then the following:
   \end{align*}
 \item let $z$ be the index of the genus $0$ vertex with the least
   number of stabilizing half edges such that $z < i$; it already has
-  $n_z + 2l_z$ half-edges, but we cannot use loops anymore to
+  $n_z + 2l_z$ half edges, but we cannot use loops anymore to
   stabilize it; hence,
   \begin{align*}
     &\max(0, 2-n_z-2l_z) \leq G - G_K - L_i - l_i + K - 1\\
     &\qquad\Rightarrow l_i \leq G - G_k - L_i + K - 3 + n_z + 2l_z
-    %Qui togliendo il massimo sembrerebbe che si ottenga una condizione piu' debole
-    %per l_i. Come mai non richiediamo piu' la condizione piu' forte nel secondo 
-    %passaggio? sono in realte' uguali le due condizioni con e senza massimo?
-    %Ho capito: il RHS della prima disuguaglianza è sempre maggiore o uguale a zero.
   \end{align*}
 \item assume $g_i = 0$; if $l_i > 0$, we are adding to the $i$-th
   vertex $2-n^{(2)}_i$ stabilizing half edges, and to stabilize the
@@ -458,7 +450,7 @@ The conditions on $l_i$ are then the following:
 \item assume $g_i = 0$; after deciding $l_i$, we still have $e^{\MAX}$
   edges to place, and each of them can contribute with one half edge
   to the stabilization of the $i$-th vertex; moreover, one of that
-  half-edges is already counted toward the stabilization; hence
+  half edges is already counted toward the stabilization; hence
   \begin{align*}
     &n_i + 2l_i + (e^{\MAX} - 1) \geq 2\\
     &\qquad\Rightarrow n_i + 2l_i + G - G_K - L_i - l_i + K - 1 - 1 \geq 2\\
@@ -470,18 +462,15 @@ The conditions on $l_i$ are then the following:
 
 After deciding $a_{i,j}$, this is the situation:
 \begin{itemize}
-\item in this section, the word ``stabilized'' goes back to its original
-  meaning, i.e., it means ``with at least $3$ half edges'', because
-  now we have already placed some non-loop edge;
-  %Vuoi dire che fino ad ora stabile significava che c'erano 2 half edges
-  %mentre ora ritornano ad essere 3? Se e' così non capisco il because nella 
-  %frase precedente.
-  
+\item in this section, the word ``stabilized'' goes back to its
+  original meaning, i.e., it means ``with at least $3$ half edges'';
+  this is necessary since here we may have already placed some
+  non-loop edges, hence we cannot track easily which vertices already
+  are connected to the rest of the graph and which are not;
 \item $e^{\MAX} = G - G_K - L_K - A_{i,j} + K - 1$;
 \item we have already placed edges between $c$ couples of different
   vertices;
 \end{itemize}
-
 
 Here are the constraints that $a_{i,j}$ must satisfy:
 \begin{enumerate}
@@ -494,7 +483,6 @@ Here are the constraints that $a_{i,j}$ must satisfy:
   estimate could be very poor, but enforcing the connectedness
   condition in its entirety before completing the graph is too slow),
   hence:
-  %Qui non capisco: devo rileggere la mail che mi hai mandato.
   \begin{align*}
     &e^{\MAX} - a_{i,j} \geq \max(0, K-2-c)\\
     &\qquad\Rightarrow a_{i,j} \leq G - G_K - L_K - A_{i,j} +K - 1 - \max(0, K-2-c)\,\text{;}
@@ -528,19 +516,18 @@ We want to prove the following result.
 
 From now on, we fix the number of vertices $K$, and focus on proving
 that the algorithm generates at least one graph for every isomorphism
-class of graphs with $K$ vertices. The conditions of stability and of 
-connectedness of the graph generated by the algorithm are checked 
-separatedly so they are not really relevant in this section.
-%Se e' vero quello che dico nel paragrafo successivo, va spiegato
-%meglio di come l'ho fatto.
-Moreover, as a consequence of the fact that our ranges for $g$,$n$,$l$ 
-and $a$ are correct, we have that it is enough to prove the proposition
-above in the case of an algorithm that works only with the ranges defined 
-by divisions.
+class of graphs with $K$ vertices.
 
+We can assume that the graphs generated by the algorithm are connected
+and stable, since we explicitly check these conditions for each graph.
 
-
-  %. They were relevant in the previous section, as our recursive way of generating graphs incorporates the check at every stage of the recursion, in order to minimize
+Moreover, in the previous section we proved that all the constraints
+we put on $g$, $n$, $l$, $a$ (apart from the one coming from
+divisions) are justified by the fact if we assign a value outside
+those constraints, the graph we obtain has no hope of becoming stable
+once completed. As a consequence, for simplicity we can prove
+Proposition~\ref{prop:main} assuming that the algorithm uses only the
+divisions constraints.
 
 \begin{notation}
   We have seen previously that we can encode the data of a stable
@@ -682,10 +669,10 @@ being an element of $\mathcal{M}$.
   Let $G = (g, n, l, a) \in \mathcal{A}$. A piece of data $g_i$,
   $n_i$, $l_i$, or $a_{i,j}$ is called a \emph{breaking position\/} if
   it does not satisfy the four conditions of
-  Lemma~\ref{lemma:char1}. 
+  Lemma~\ref{lemma:char1}.
 \end{definition}
 
-In particular, in view of the last definition, Lemma \ref{lemma:char1} translates into the following statement: \emph{A stable graph $G \in \mathcal{A}$ has a breaking position
+In particular, in view of the last definition, Lemma~\ref{lemma:char1} translates into the following statement: \emph{A stable graph $G \in \mathcal{A}$ has a breaking position
   if and only if $G$ is not an element of $\mathcal{M}$}.
 
 We now introduce a total order on the set $\mathcal{A}$ of graphs $G = (g,n,l,a)$. If $G$ is such a graph, let $v(G)$ be the vector obtained by
@@ -727,7 +714,7 @@ v(G) = (0, 0, 2, 0,\quad 1, 1, 0, 1,\quad 0, 0, 0, 0,\quad 1, 1,
   \[
   \bigl\{ \sigma_{i-1,i} G \,\mid\, 1<i<K \bigr\}\text{.}
   \]
-  with respect to the order given in \ref{def:order}.
+  with respect to the order given in Definition~\ref{def:order}.
 \end{lemma}
 
 \begin{proof}
@@ -743,7 +730,7 @@ v(G) = (0, 0, 2, 0,\quad 1, 1, 0, 1,\quad 0, 0, 0, 0,\quad 1, 1,
   we have $a_{i-1, j^\prime} = a_{i, j^\prime}$. %A priori the equality
  % sign should be a ``less or equal to'', but if the first was strictly
  % smaller than the second, then $(i,j^\prime)$ would have been a
- % smaller breaking position. 
+ % smaller breaking position.
   Let $H \coloneqq \sigma_{i-1,i} G$; the
   following pictures sum up the differences between $G$ and $H$: the
   left one represents the case $i < j$, the right one the case $i >
@@ -850,7 +837,7 @@ arguing as in the following example.
   G_1\text{.}
   \]
   The new smallest breaking position is $a_{1,3}$, so applying the
-  transposition $\sigma_{0,1}$ we have 
+  transposition $\sigma_{0,1}$ we have
   \[
   G_3 \coloneqq \sigma_{0,1} G_2 = \psm{ 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
     0\\ 0 & 0 & 0 & 0\\ & 1 & 1 & 0\\ && 1 & 1\\ &&& 2 } \prec
