--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -140,11 +140,13 @@ K-1\}$. Let $\Sigma_K$ be the symmetric group on the set $\ubar{K}$.
   \end{enumerate}
 \end{definition}
 
-\begin{notation} We will call \emph{half edge} associated to a vertex $v$
-either a marked point on $v$ or half of an edge that connects $v$ to an
-other vertex. In this way the stability condition can be rephrased in: for
-every vertex $v$ of genus $0$ there are at least $3$ half edges on it.
-An half edge is said to come from an edge if it is of the second type.
+\begin{notation}
+  We will call \emph{half edge} associated to a vertex $v$ either a
+  marked point on $v$ or half of an edge that connects $v$ to an other
+  vertex. In this way the stability condition can be rephrased in: for
+  every vertex $v$ of genus $0$ there are at least $3$ half edges on
+  it. An half edge is said to come from an edge if it is of the
+  second type.
 \end{notation}
 
 Two stable graphs $\graph = (V, E, g, n)$ and $\graph^\prime =
@@ -310,6 +312,9 @@ before $j$ if $a_{i,j} > a_{i,j-1}$.
   of generating only ordered columns does not miss any stable graph 
   is the content of the following section.
 %\end{remark}
+
+
+
 \section{The program generates all graphs}\label{sec:proof}
 
 We want to prove the following result.
